# redisd

./: Cargo.toml  README.md  default.nix  flake.nix
src/: cli.rs  flake.nix  main.rs
