[package]
name = "redisd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
redis = { version = "1.2.0", features = ["tls-rustls"] }
rustls = "0.23.40"
url = "2.5.8"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
